tests/negative/traits/impl_for_template.orng
// impl_for_template.orng:6:13: error: symbol `Box` requires 1 generic argument
// impl for Box {}
//            ^
// 
struct Box[T] { x: T }
impl for Box {}
fn main() {}